--- a/Views/Equipment/Details.cshtml
+++ b/Views/Equipment/Details.cshtml
@@ -96,12 +96,13 @@
                 </div>
 
                 <div class="form-group">
-                    <label>Addition Date</label>
-                    <div class="input-group date" id="additionDate" data-target-input="nearest">
-                        <div class="input-group-prepend" data-target="#additionDate" data-toggle="datetimepicker">
-                            <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                    <label>Addition Date</label>                    
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-calendar"></i></span>
+
                         </div>
-                        <input type="text" class="form-control datetimepicker-input" value="@Model.AdditionDate" data-target="#additionDate" id="additionDateInput" disabled>
+                        <input type="text" class="form-control" value="@Model.AdditionDate.ToShortDateString()" id="additionDate" wfd-id="id1" readonly>
                     </div>
                 </div>
 
